# lob-dataset-analyzer

./: .gitignore  CODEBASE.md  README.md  pyproject.toml
scripts/: run_complete_analysis.py  validate_on_real_data.py
src/lobanalyzer/: __init__.py
src/lobanalyzer/analysis/: __init__.py  data_overview.py  generalization.py  intraday_seasonality.py  label_analysis.py  predictive_power.py  signal_correlations.py  signal_stats.py  streaming_stats.py  temporal_dynamics.py
src/lobanalyzer/constants/: __init__.py  feature_index.py
src/lobanalyzer/streaming/: __init__.py  convenience.py  day_data.py  iterators.py
src/lobanalyzer/validation/: __init__.py
tests/: __init__.py  test_analysis.py  test_constants.py  test_predictive_power.py  test_signal_correlations.py  test_signal_stats.py  test_streaming.py  test_streaming_convenience.py
