[project]
name = "lob-dataset-analyzer"
version = "0.1.0"
description = "Comprehensive dataset analysis for Limit Order Book ML pipelines"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "HFT Pipeline Team" }
]
keywords = [
    "limit-order-book",
    "lob",
    "hft",
    "high-frequency-trading",
    "dataset-analysis",
    "financial-data",
    "machine-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core scientific computing
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    
    # Statistical analysis
    "statsmodels>=0.14",       # ADF tests, autocorrelation
    "scikit-learn>=1.3",       # PCA, VIF, correlations
    
    # Progress and CLI
    "tqdm>=4.65",
    "rich>=13.0",              # Rich console output
    
    # Serialization
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[project.scripts]
lob-analyze = "lobanalyzer.cli:main_analyze"
lob-validate = "lobanalyzer.cli:main_validate"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lobanalyzer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104", "D107", "D203", "D213"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
